--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -47,12 +47,12 @@
     </li>
     <li>
       <a 
-        (click)="navigateToPage('/rules')" 
-        [class.active]="isActiveRoute('/rules')"
+        (click)="navigateToPage('/documents')" 
+        [class.active]="isActiveRoute('/documents')"
         role="button"
         tabindex="0"
-        (keydown.enter)="navigateToPage('/rules')"
-        (keydown.space)="navigateToPage('/rules')">
+        (keydown.enter)="navigateToPage('/documents')"
+        (keydown.space)="navigateToPage('/documents')">
         Dokumenti
       </a>
     </li>
